manifests/infrastructure/oauth2-proxy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-endpoints
  namespace: networking
spec:
  parentRefs:
    - name: edge
      namespace: networking
  hostnames:
    - "auth.mikolajmaciejak.dev"
    - "hubble.mikolajmaciejak.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy
          port: 80
